--- a/app/src/main/res/layout/activity_wellcome.xml
+++ b/app/src/main/res/layout/activity_wellcome.xml
@@ -7,7 +7,7 @@
     tools:context=".WellcomeActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tv_app_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -15,7 +15,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="50dp"
-        android:text="Uygulama hakkında kısa bir bilgi *"
+        android:text="@string/app_info"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,9 +25,11 @@
         android:id="@+id/button_cont"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
-        android:text="Devam"
+        android:layout_marginBottom="40dp"
+        android:background="@android:color/holo_green_light"
+        android:text="@string/continue_"
         android:textAllCaps="false"
+        android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
