--- a/app/src/main/res/layout/activity_enter_single_observation.xml
+++ b/app/src/main/res/layout/activity_enter_single_observation.xml
@@ -2,9 +2,9 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout_single_observation_send"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/layout_single_observation_send"
     tools:context=".EnterSingleObservation">
 
     <TextView
@@ -30,6 +30,9 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
+        android:drawableLeft="@android:drawable/ic_menu_search"
+        android:drawablePadding="5dp"
+        android:drawableTint="@color/colorPrimary"
         android:ems="10"
         android:hint="@string/measurement"
         android:inputType="numberDecimal"
@@ -46,6 +49,9 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:drawableLeft="@android:drawable/ic_menu_mylocation"
+        android:drawablePadding="5dp"
+        android:drawableTint="@color/colorPrimary"
         android:ems="10"
         android:hint="@string/location_optional"
         app:layout_constraintEnd_toEndOf="parent"
@@ -62,6 +68,9 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:drawableLeft="@android:drawable/ic_menu_info_details"
+        android:drawablePadding="5dp"
+        android:drawableTint="@color/colorPrimary"
         android:ems="10"
         android:hint="@string/additional_info_optional"
         android:inputType="textMultiLine"
@@ -82,6 +91,7 @@
         android:text="@string/send"
         android:textAllCaps="false"
         android:textColor="@android:color/white"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_additional_info" />
