--- a/app/src/main/res/layout/activity_wellcome.xml
+++ b/app/src/main/res/layout/activity_wellcome.xml
@@ -17,6 +17,7 @@
         android:layout_marginTop="30dp"
         android:gravity="center_horizontal"
         android:text="@string/project_name"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,6 +35,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:text="@string/app_info"
+        android:textColor="@color/colorPrimary"
         android:textSize="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
